--- a/main/templates/social/social_message_thread.html
+++ b/main/templates/social/social_message_thread.html
@@ -27,10 +27,10 @@
 </div>
 
 <script type="text/javascript" charset="utf-8">
-    const username = '{{ current_user.username }}'
-    const user_id = '{{ current_user.id }}'
-    const thread_id = '{{ message_thread_id }}'
-    const message_url = "{{ url_for('socials.social_get_messages', message_thread_id = message_thread_id) }}"
+    const username = '{{ current_user.username }}';
+    const user_id = '{{ current_user.id }}';
+    const thread_id = '{{ message_thread_id }}';
+    const message_url = "{{ url_for('socials.social_get_messages', message_thread_id = message_thread_id) }}";
 </script>
 
 <script src="{{ url_for('static', filename='js/chat.js')}}"></script>
