--- a/main/templates/includes/header/logged_in_li.html
+++ b/main/templates/includes/header/logged_in_li.html
@@ -21,14 +21,14 @@
 </li>
 
 <!-- Notes -->
-<!-- <li class="nav-item pe-4">
+<li class="nav-item pe-4">
     <a class="nav-link d-block d-lg-none d-xl-block" href="{{ url_for('students.student_note') }}">
         <i class="fa-solid fa-note-sticky"></i> Notes
     </a>
     <a class="nav-link d-none d-lg-block d-xl-none" data-toggle="tooltip" data-placement="bottom" title="Notes" href="{{ url_for('students.student_note') }}">
         <i class="fa-solid fa-note-sticky"></i>
     </a>
-</li> -->
+</li>
 
 <!-- Posts -->
 <li class="nav-item pe-4">
