--- a/main/templates/student/student_note_single.html
+++ b/main/templates/student/student_note_single.html
@@ -1,4 +1,75 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>Single note</h1>
+<div>
+    <form method="POST" action="">
+        {{ form.hidden_tag() }}
+        <div>
+            {{ form.title.label( class="form-label" ) }}
+    
+            <br>
+    
+            {{ form.title( class="form-control" ) }}
+            
+            {% if form.title.errors %}
+                <div>
+                    {% for error in form.title.errors %}
+                        <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        </div>
+        {% if note.date_created %}
+
+        <div class="d-flex flex-wrap p-2">
+            <div class="col pe-4">
+                Created: {{ note.date_created.strftime('%I:%M, %d %b %Y') }} (UTC)
+            </div>
+            <div class="text-end">
+                Last Edited: {{ note.date_edited.strftime('%I:%M, %d %b %Y') }} (UTC)
+            </div>
+        </div>
+
+        <hr class="pb-1">
+        {% else %}
+        <br>
+        {% endif %}
+
+        <div>
+            <div class="form-label">What module is the note for?</div>
+            
+            <select name="module_select" id="module_select" class="form-select">
+                <option value="">Personal Note/Other</option>
+
+                {% for module in my_aside_dict.subscribed_modules %}
+                <option value="{{ module.module_id }}" {% if module.module_id == module_select_id %}selected{% endif %}>{{ module.module.code }} - {{ module.module.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+
+        <br>
+        
+        <div>
+            {{ form.text.label( class="form-label" ) }}
+        
+            <br>
+            
+            {{ form.text( class="form-control", rows = 20 ) }}
+            
+            {% if form.text.errors %}
+                <div>
+                    {% for error in form.text.errors %}
+                        <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        </div>
+
+        <br>
+    
+        <div>
+            {{ form.submit( class='btn' ) }}
+        </div>
+        <br>
+    </form>
+</div>
 {% endblock content %}
