--- a/main/templates/module/module_question_list.html
+++ b/main/templates/module/module_question_list.html
@@ -77,8 +77,10 @@
 
 {% else %}
 <div>
-    You haven't asked any questions yet
+    <em>You haven't asked any questions yet</em>
 </div>
+
+<br>
 {% endif %}
 
 
@@ -159,8 +161,10 @@
 
 {% else %}
 <div>
-    There are no questions for any of your modules yet
+    <em>There are no questions for any of your modules yet</em>
 </div>
+
+<br>
 {% endif %}
 
 <br>
