--- a/main/templates/module/module_resource_list.html
+++ b/main/templates/module/module_resource_list.html
@@ -77,7 +77,7 @@
 
 {% else %}
 <div>
-    You haven't asked any questions yet
+    <em>You haven't asked any questions yet</em>
 </div>
 {% endif %}
 
