--- a/main/templates/social/post/social_post_list.html
+++ b/main/templates/social/post/social_post_list.html
@@ -71,8 +71,10 @@
 
 {% else %}
 <div>
-    There are no posts for any of your socials yet
+    <em>There are no posts for any of your socials yet</em>
 </div>
+
+<br>
 {% endif %}
 
 <br>
