--- a/main/templates/student/student_home.html
+++ b/main/templates/student/student_home.html
@@ -11,7 +11,7 @@
 <div class="d-flex flex-wrap p-2">
     <div class="col">
         <h3>Latest Question</h3>
-        <span><em>In need of an Answer</em></span>
+        <span>In need of an Answer</span>
     </div>
     <div class="">
         <a href="{{ url_for('modules.module_question_add') }}" class="btn btn-secondary">I have a Question</a>
