--- a/main/templates/user/account.html
+++ b/main/templates/user/account.html
@@ -108,6 +108,13 @@
         </form>
     </div>
 
+    <br><br>
+
+    <div>
+        <h3 class="pb-2">Want to change your password?</h3>
+        <a class="btn btn-secondary" href="{{ url_for('users.student_password_change')}}">Change Password</a>
+    </div>
+
     <br><br><br>
 
 {% endblock %}
